<resources>
    <string name="app_name">Interview Task Wingstech</string>
    <string name="employee_login">Employee Login</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="signup_with_email">Signup with email</string>
    <string name="employee_register">Employee Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_number">Phone Number</string>
</resources>